# libusb

./: LICENSE.meson.txt  meson.build  meson_options.txt
doc/: meson.build
examples/: meson.build
libusb/: meson.build
meson/: fix_def.py
msvc/getopt/: meson.build
tests/: meson.build  testlib.c
